--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /*=== HEADER ===*/
 nav {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   gap: 8px;
+  padding: 24px;
 }
 
 nav img {
@@ -20,30 +21,37 @@ main {
   align-items: center;
 }
 
-.pokedex-content {
+.main-content {
   display: flex;
   gap: 16px;
 }
 
 .pokedex-card {
-  width: 30%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  border: 2px solid #ffffff;
+  flex-wrap: wrap;
+  background-color: rgb(232, 230, 230);
+  padding: 8px;
   border-radius: 16px;
 }
 
-.pokedex-card-info {
+.pokedex-card-image {
   display: flex;
   align-items: center;
+  border: 2px solid #ffffff;
+  border-radius: 16px;
+  background-color: white;
 }
 
 .pokemon-image {
-  border-bottom-left-radius: 16px;
+  height: 160px;
+  width: 160px;
+  border-top-right-radius: 16px;
   border-bottom-right-radius: 16px;
 }
 
 .pokedex-icon {
-  height: 40px;
-  width: 40px;
+  height: 160px;
+  width: 50%;
 }
