--- a/style.css
+++ b/style.css
@@ -1,64 +1,69 @@
 /*=== HEADER ===*/
-nav {
+header {
+  background-color: #e4350d;
+}
+
+.navigation {
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
-.logo-wrapper {
+.logo-field {
   display: flex;
+  align-items: center;
   gap: 8px;
-  padding: 24px;
-  justify-content: center;
-  align-self: center;
 }
 
-nav img {
+.logo-field img {
   height: 40px;
+}
+
+.logo-field h1 {
+  color: white;
+}
+
+.search-field {
+  height: 40px;
+  width: 240px;
+  background-color: #baf1f0;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  padding: 0px 4px;
+}
+
+.search-bar {
+  background: #ffffff;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border: 1px solid #baf1f0;
+  gap: 8px;
+  border-radius: 8px;
+}
+
+.search-bar img {
+  height: 24px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding-left: 4px;
+}
+
+.search-input {
+  height: 32px;
+  border: none;
+  padding-left: 4px;
+  width: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 /*=== MAIN ===*/
 main {
-  background-image: url(assets/img/pokedex-bg.png);
-  min-height: 100vh;
+  background-image: url("assets/img/pokedex-cover.png");
+  background-position: bottom;
   background-size: cover;
-  object-fit: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-content {
-  display: flex;
-  gap: 16px;
-}
-
-.pokedex-card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: rgb(232, 230, 230);
-  padding: 8px;
-  border-radius: 16px;
-}
-
-.pokedex-card-image {
-  display: flex;
-  align-items: center;
-  border: 2px solid #ffffff;
-  border-radius: 16px;
-  background-color: white;
-}
-
-.pokemon-image {
-  height: 160px;
-  width: 160px;
-  border-top-right-radius: 16px;
-  border-bottom-right-radius: 16px;
-}
-
-.pokedex-icon {
-  height: 160px;
-  width: 50%;
+  height: 100vh;
+  max-width: 100vw;
+  opacity: 0.5;
 }
