--- a/style.css
+++ b/style.css
@@ -54,8 +54,7 @@ header {
   border: none;
   padding-left: 4px;
   width: 100%;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-radius: 8px;
 }
 
 /*=== MAIN ===*/
