--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ main {
   padding: 8px;
   transition: transform 0.12s ease-in-out;
 }
+
+.pokemon-card img {
+  height: 80%;
+}
+
 .pokemon-card:hover {
   transform: translateY(-2px);
 }
