--- a/styles/pokemon_card.css
+++ b/styles/pokemon_card.css
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 8px;
+  padding: 16px;
   gap: 4px;
 }
 
@@ -41,8 +41,10 @@
 }
 
 .pokemon-card-type {
-  padding: 4px;
-  border-radius: 8px;
+  padding: 8px;
+  border-radius: 16px;
+  color: #fefeff;
+  font-size: 14px;
 }
 
 /* Pokemon Type Colors */
