--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -61,8 +61,11 @@
   border: 4px solid #bbf2f0;
   border-radius: 16px;
   padding: 0;
-  margin: auto;
   background-color: #ffffff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .pokemon-dialog::backdrop {
@@ -112,10 +115,12 @@
 }
 
 .dialog-content img {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   background-color: #f3f4f6;
   border-radius: 50%;
+  margin: 0 auto;
+  display: block;
 }
 
 .dialog-types {
