--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -1,59 +1,3 @@
-/* === Pokemon Type Colors === */
-.type-normal {
-  background-color: #a8a878;
-}
-.type-fire {
-  background-color: #f08030;
-}
-.type-water {
-  background-color: #6890f0;
-}
-.type-electric {
-  background-color: #f8d030;
-}
-.type-grass {
-  background-color: #78c850;
-}
-.type-ice {
-  background-color: #98d8d8;
-}
-.type-fighting {
-  background-color: #c03028;
-}
-.type-poison {
-  background-color: #a040a0;
-}
-.type-ground {
-  background-color: #e0c068;
-}
-.type-flying {
-  background-color: #a890f0;
-}
-.type-psychic {
-  background-color: #f85888;
-}
-.type-bug {
-  background-color: #a8b820;
-}
-.type-rock {
-  background-color: #b8a038;
-}
-.type-ghost {
-  background-color: #705898;
-}
-.type-dragon {
-  background-color: #7038f8;
-}
-.type-dark {
-  background-color: #705848;
-}
-.type-steel {
-  background-color: #b8b8d0;
-}
-.type-fairy {
-  background-color: #ee99ac;
-}
-
 /* === DIALOG === */
 .pokemon-dialog {
   max-width: 600px;
@@ -62,10 +6,12 @@
   border-radius: 16px;
   padding: 0;
   background-color: #ffffff;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .pokemon-dialog::backdrop {
@@ -119,8 +65,6 @@
   height: 400px;
   background-color: #f3f4f6;
   border-radius: 50%;
-  margin: 0 auto;
-  display: block;
 }
 
 .dialog-types {
