--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -44,14 +44,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 1px 2px rgb(26, 55, 71);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   gap: 16px;
 }
 
 .dialog-header-box h2 {
   font-size: 22px;
   margin: 0;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-weight: bold;
   color: #2d3748;
   text-align: left;
@@ -87,12 +87,12 @@
 }
 
 .dialog-image-section img {
-  width: 220px;
-  height: 220px;
+  width: 80%;
+  height: 80%;
   object-fit: contain;
   background-color: rgba(255, 255, 255, 0.3); /* Leicht weißer Kreis */
   border-radius: 50%;
-  padding: 8px;
+  padding: 20px;
 }
 
 .dialog-image-section img:hover {
@@ -144,7 +144,6 @@
   padding: 16px;
   margin-bottom: 16px;
   border-radius: 16px;
-  box-shadow: 0 1px 2px rgb(26, 55, 71);
 }
 
 .info-box h3 {
@@ -194,7 +193,6 @@
   background-color: #f0f0f0;
   padding: 16px;
   border-radius: 16px;
-  box-shadow: 0 1px 2px rgb(26, 55, 71);
 }
 
 .stats-box h3 {
